--- a/index.html
+++ b/index.html
@@ -1,29 +1,226 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pagina Inicial</title>
+  <title>DataStorm</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="hero">
-    <div class="navbar">
-      <div class="logo" style="font-family:'Times New Roman', serif; font-size:40px;">DataStorm</div>
-      <ul class="nav-links">
-        <li style="font-size:30px;">NEWS</li>
-        <li style="font-size:30px;">ISTORY</li>
-        <li style="font-size:30px;">LIVE</li>
-        <li class="login" style="font-size:30px;">LOG IN</li>
-        <li class="icon">🔍</li>
-        <li class="icon">☰</li>
-      </ul>
+  <header>
+    <div class="header">
+      <a href="#">
+        <h1>DataStorm</h1>
+      </a>
+      <buttons>
+        <a href="#">News</a>
+        <a href="#">History</a>
+        <a href="#">Live</a>
+        <a class="login" href="#">Login</a>
+        <a href="#">🔍</a>
+        <a href="#">☰</a>
+      </buttons>
     </div>
-    <div class="hero-content">
-      <a href="#" class="explore-button">EXPLORE SPACE NOW</a>
-      <h1 class="mission-title">FRAM2 MISSION ➜</h1>
-    </div>
-  </div>
+  </header>
+
+
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
+  <li>a</li>
 </body>
 </html>
